# dotfiles

./: .chezmoi.toml.tmpl  .chezmoiignore  .spacemacs  .tmux.conf  .vimrc  .zshrc  alacritty.yml  cloud_config.yaml  dot_bashrc  dot_francois.zshrc  dot_gitconfig  dot_rtorrent.rc  dot_tmux.conf  dot_zshrc  email_template.txt  packages.txt  private_dot_tokens.tmpl  run_create_ssh_keys.py  run_create_ssh_keys.sh  run_install_nix.py  run_once_install_1password.sh  run_once_update_origin.sh  setup.sh
.vim/: site
.vim/mysnippets/: python.snippets  sh.snippets
dot_config/chezmoi/: chezmoi.toml
dot_config/doom/: config.el  custom.el  init.el  packages.el
dot_config/environment.d/: symlink_10-home-manager.conf
dot_config/git/: symlink_config
dot_config/home-manager/: flake.nix  flake.nix.tmpl  home.nix  home.nix.tmpl  packages.txt
dot_environment/python/: ec2.py  notification.py  pyproject.toml
dot_environment/python/biotools/: README.md  constants.py  dot_gitignore  dot_gitmodules  executable_cdhit_peptide_clustering.py  executable_dataframe_to_fasta.py  executable_fastaize.py  executable_modlamp_peptide_clustering.py  requirements.txt
dot_environment/python/mytemplates/: selenium_example.py
dot_environment/python/plotting/: thesis_style.py
hooks/: pre-apply.sh
private_dot_hermes/: private_config.yaml.tmpl  private_dot_env.tmpl
private_dot_ssh/: config  config.tmpl
private_dot_tokens/: private_claude.tmpl  private_nuvobio.tmpl  private_op.tmpl  private_pushover.tmpl
ubuntu/: .zshrc  setup.sh
vim/: behavior.vim  mappings.vim  plugins.vim
(+45 files in other folders)
